Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105102

qt_internal_add_tool and qt_internal_add_app does not get the value of QT_DISABLE_DEPRECATED_BEFORE

    XMLWordPrintable

Details

    • 5
    • b83fc9f41a (qt/qtbase/dev) b83fc9f41a (qt/tqtc-qtbase/dev)
    • Foundation Sprint 64, Foundation Sprint 65

    Description

      When building qttools repo with QT_DISABLE_DEPRECATED_BEFORE=0x060000 and sevarel patches applied, I run into a linking error when building qhelpgenerator, because it tries to find the deprecated symbols, ignoring the fact that I guarded the relevant calls with #if QT_DEPRECATED_SINCE().

      If I explicitly extend its CMakeLists.txt to define QT_DISABLE_DEPRECATED_BEFORE, the error is gone.

      Same is valid for the assistant target.

      Attachments

        For Gerrit Dashboard: QTBUG-105102
        # Subject Branch Project Status CR V

        Activity

          People

            ivan.solovev Ivan Solovev
            ivan.solovev Ivan Solovev
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: